[tool.poetry]
name = "asltk"
version = "0.0.1"
description = "A quick to use library to process images for MRI Arterial Spin Labeling imaging protocols."
authors = ["Antonio Senra Filho <acsenrafilho@alumni.usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.13.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.34"
mkdocstrings = "^0.26.1"
mkdocstrings-python = "^1.11.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
